--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "babel src --out-dir lib",
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "mocha --compilers js:babel-core/register 'test/**/*.spec.js'"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,9 @@
     "asset-require-hook": "^1.0.2",
     "babel-cli": "^6.22.2",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0"
+    "babel-preset-stage-0": "^6.22.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "mock-fs": "^4.0.0"
   }
 }
